Update score game header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button class="add-point-btn" onclick="addThreePointHome()">+3</button>
             </div>
             <div>
-                <h1 class="main-heading">AWAY</h1>
+                <h1 class="main-heading">GUEST</h1>
                 <h1 class="home-score" id="guest-point">0</h1>
                 <button class="add-point-btn" onclick="addOnePointGuest()">+1</button>
                 <button class="add-point-btn" onclick="addTwoPointGuest()">+2</button>
